<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:id="@+id/linearRecordpowercab"
        style="@style/groupStylewhite_A700"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAdditionalDeta"
            style="@style/txtInterbold15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/msg_additional_deta"
            tools:text="@string/msg_additional_deta" />

        <TextView
            android:id="@+id/txtDoesthepowerl"
            style="@style/txtInterregular14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/_20pxh"
            android:ellipsize="end"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@string/msg_does_the_powerl2"
            tools:text="@string/msg_does_the_powerl2" />

<!--        <androidx.appcompat.widget.AppCompatButton-->
<!--            android:id="@+id/btnDoesThePowerlineHaveBrokenlooseCables"-->
<!--            style="@style/btnSolidRoundedOutline"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="@dimen/_19pxh"-->
<!--            android:layout_marginTop="@dimen/_3pxv"-->
<!--            android:layout_marginEnd="@dimen/_19pxh"-->
<!--            android:ellipsize="end"-->
<!--            android:gravity="center"-->
<!--            android:lineSpacingExtra="@dimen/_3pxh"-->
<!--            android:paddingStart="@dimen/_15pxh"-->
<!--            android:paddingTop="@dimen/_15pxv"-->
<!--            android:paddingEnd="@dimen/_22pxh"-->
<!--            android:paddingBottom="@dimen/_15pxv"-->
<!--            android:singleLine="true"-->
<!--            android:text="@string/msg_does_the_powerl2"-->
<!--            android:textAllCaps="false"-->
<!--            tools:text="@string/msg_does_the_powerl2" />-->
        <RadioGroup
            android:id="@+id/toggleIfCables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_marginEnd="@dimen/_19pxh">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/yes"
                android:text="Yes" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/no"
                android:text="No" />
        </RadioGroup>
<!--Start of toggle layout-->
    <LinearLayout
        android:id="@+id/toggleCableDetailsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"> <!-- gone -->

        <TextView
            android:id="@+id/txtWhatisthecon"
            style="@style/txtInterregular14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/_19pxh"
            android:ellipsize="end"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@string/msg_how_many_cables"
            tools:text="@string/msg_how_many_cables" />

        <EditText
            android:id="@+id/etCountCables"
            style="@style/etSolidRoundedOutline_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_5"
            android:ellipsize="end"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:hint="@string/msg_count_of_broken"
            android:inputType="number"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingStart="@dimen/_15pxh"
            android:paddingTop="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_15pxv"
            android:singleLine="true"
            android:textColorHint="@color/gray_601"
            tools:ignore="Autofill" />

        <LinearLayout
            android:id="@+id/linearColumnaphotoofthe"
            style="@style/groupStylecornerRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAphotoofthe"
                style="@style/txtInterregular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/msg_a_photo_of_the"
                tools:text="@string/msg_a_photo_of_the" />

            <LinearLayout
                android:id="@+id/linearRowchoosePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13pxv"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnChoosePhoto"
                    style="@style/btnSolidRounded"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_23pxh"
                    android:paddingBottom="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="Choose/Take Photo"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txtPhotoPath"
            style="@style/txtInterregular12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:ellipsize="end"
            android:singleLine="false"
            android:lines="3"
            android:maxLines="3"
            android:text="@string/msg_photos_sd_card"
            tools:text="@string/msg_photos_sd_card" />

        <FrameLayout
            android:id="@+id/frameSelectedtaken"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_205pxv"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/_19pxh">

            <ImageView
                android:id="@+id/selectedImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:scaleType="centerInside"
                android:src="@drawable/pline"
                tools:ignore="ContentDescription" />
        </FrameLayout>
<!--End of linear layout-->
    </LinearLayout>
        <LinearLayout
            android:id="@+id/linearNextbackbutto"
            style="@style/groupStylecornerRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBack"
                style="@style/btnSolidRounded"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.49"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@string/lbl_back"
                android:textAllCaps="false"
                tools:text="@string/lbl_back" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnReviewDetails"
                style="@style/btnSolidRounded"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_39pxh"
                android:layout_weight="0.51"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_25pxh"
                android:paddingTop="@dimen/_15pxv"
                android:paddingEnd="@dimen/_26pxh"
                android:paddingBottom="@dimen/_15pxv"
                android:singleLine="true"
                android:text="@string/lbl_review_details"
                android:textAllCaps="false"
                tools:text="@string/lbl_review_details" />
        </LinearLayout>
    </LinearLayout>
</layout>
