<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <FrameLayout android:id="@+id/frameIncidentphoto"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumngoback"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_11pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowgoback"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageGoBack"
                        android:layout_height="@dimen/_32pxh"
                        android:layout_width="@dimen/_41pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_goback"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_goback"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtIncidentReport"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:layout_marginStart="@dimen/_63pxh"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_weight="0.77"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/msg_incident_report"
                        style="@style/txtInterbold15" tools:text="@string/msg_incident_report"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout android:id="@+id/linearColumnphotoofthepo"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPhotoofthepo"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/msg_photo_of_the_po"
                    style="@style/txtInterregular14" tools:text="@string/msg_photo_of_the_po"/>
                <LinearLayout android:id="@+id/linearRowchoosePhoto"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnChooseTakePhoto"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:paddingBottom="@dimen/_13pxv"
                        android:paddingEnd="@dimen/_24pxh"
                        android:paddingStart="@dimen/_24pxh"
                        android:paddingTop="@dimen/_13pxv"
                        android:singleLine="true"
                        android:text="Choose/Take photo"
                        android:textAllCaps="false"
                        style="@style/btnSolidRounded" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPhotoPath"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="match_parent"
                android:singleLine="false"
                android:lines="3"
                android:maxLines="3"
                android:text="@string/msg_photos_sd_card"
                style="@style/txtInterregular12" tools:text="@string/msg_photos_sd_card"/>
            <FrameLayout android:id="@+id/frameSelectedtaken"
                android:layout_height="@dimen/_205pxv"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent">

                <ImageView android:id="@+id/selectedImg"
                    android:layout_gravity="start"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_splashimage"
                    tools:ignore="ContentDescription" />
            </FrameLayout>
<!--            <TextView-->
<!--                android:id="@+id/txtSelectthestatTwo"-->
<!--                style="@style/txtInterregular14"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:layout_marginEnd="@dimen/_10pxh"-->
<!--                android:ellipsize="end"-->
<!--                android:lineSpacingExtra="@dimen/_3pxh"-->
<!--                android:singleLine="true"-->
<!--                android:text="@string/msg_how_many_casual"-->
<!--                tools:text="@string/msg_how_many_casual" />-->

<!--            <EditText-->
<!--                android:id="@+id/etCasualties"-->
<!--                style="@style/etSolidRoundedOutline"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="@dimen/_3pxv"-->
<!--                android:background="@drawable/rectangle_bg_white_a700_border_bluegray_400_radius_5"-->
<!--                android:ellipsize="end"-->
<!--                android:hint="Example; 10"-->
<!--                android:textSize="15dp"-->
<!--                android:inputType="number"-->
<!--                android:textColor="@color/black"-->
<!--                android:lineSpacingExtra="@dimen/_3pxh"-->
<!--                android:paddingStart="@dimen/_15pxh"-->
<!--                android:paddingTop="@dimen/_16pxv"-->
<!--                android:paddingEnd="@dimen/_30pxh"-->
<!--                android:paddingBottom="@dimen/_14pxv"-->
<!--                android:singleLine="true"-->
<!--                android:textColorHint="@color/gray_500"-->
<!--                tools:ignore="Autofill" />-->
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnReportIncidentNow"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@string/msg_report_incident"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_2" />
        </LinearLayout>
    </FrameLayout>
</layout>
